--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/outfit": "^5.0.13",
+    "@fontsource/kurale": "^5.0.14",
     "astro": "^4.8.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "clsx": "^2.1.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0"
   }
